replace Strings class with version from olca-commons